# ABI-study

./: .gitignore  ReadMe.md  make_ABI_sample.sh  run_sample.sh
app/: main.cpp
app/v1/: CMakeLists.txt
app/v2/: CMakeLists.txt
gccCmd/: make_ABI_test.sh  make_app.sh  make_opaquelib.sh  make_vendorlib.sh
testing/: main.cpp  make_app.sh  make_test_so.sh  make_testing.sh  make_third_so.sh  testlib.cpp  testlib.h  thirdlib.cpp  thirdlib.h
